# rust-web-application-practice

./: .gitignore  Cargo.toml  Makefile.toml  README.md  index.html
src/: api.rs  app.rs  lib.rs  main.rs  route.rs  types.rs
src/components/: career_card.rs  mod.rs  navbar.rs  navbar_item.rs
src/pages/: career.rs  home.rs  mod.rs  profile.rs
static/: index.html
static/products/: users.json
