[package]
name = "rust_with_web_application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib"]

[dependencies]
yew="0.19"
yew-router="0.16.0"
wasm-bindgen="0.2.78"
anyhow="1.0.56"
serde={version="1.0", features=["derive"]}
gloo-utils="0.1"
wasm-bindgen-futures="0.4"
rand="0.8.5"
getrandom={ version="0.2", features=["js"] }

[dependencies.web-sys]
version="0.3.56"
features=[
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
]
